# rocket_clusters_dynamics

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  generate_paper_figures.py  parametric_sweep.py
notebooks/: demo_analysis.ipynb
src/cre/: __init__.py  cli.py
src/cre/api/: __init__.py  app.py  schemas.py
src/cre/api/routes/: amplification.py  clusters.py  damping.py  engines.py  plots.py  stability.py
src/cre/configs/: __init__.py  clusters.py  defaults.py  engines.py
src/cre/core/: __init__.py  acoustics.py  amplification.py  coupled_modes.py  coupling.py  crocco.py  damping.py  oscillator.py  stability.py
src/cre/models/: __init__.py  cluster.py  engine.py  environment.py  results.py
src/cre/plotting/: __init__.py  amplification.py  damping_spectrum.py  stability_map.py  style.py
tests/: conftest.py  test_acoustics.py  test_amplification.py  test_api.py  test_cli.py  test_configs.py  test_coupled_modes.py  test_coupling.py  test_crocco.py  test_damping.py  test_models.py  test_oscillator.py  test_plotting.py  test_results.py  test_stability.py
